--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "test": "vitest"
+    "test": "vitest",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.0.2"
+    "axios": "^1.3.4",
+    "typescript": "^5.0.2",
+    "vitest": "^0.29.3"
+  },
+  "dependencies": {
+    "fastify": "^4.14.1",
+    "mongoose": "^7.0.2"
   }
 }
